add interface to out api secondPhase successful:)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,10 @@ spring.datasource.password = root
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
+#spring.mvc.view.suffix=.jsp
+
 server.error.include-stacktrace = never
+
 
 server.port = 8090
 
